# financial_analyzer

./: .gitattributes  .gitignore  AZURE_DEPLOYMENT_GUIDE.md  CLAUDE.md  LICENSE  ML_PREDICTION_PLAN.md  README.md  TODO.md  azure-status.sh  deploy-to-azure.sh  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  update-backend.sh
.claude/commands/: quickly.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-test.yml
Research/: companies.md  technology_stack.md
backend/: docker-compose.yml
backend/go-api/: .air.toml  Dockerfile  go.mod
backend/go-api/cmd/api/: main.go
backend/go-api/cmi/api/: main.go
backend/portfolio-service/: Dockerfile  Dockerfile.test  README.md  pyproject.toml
backend/portfolio-service/app/: main.py
backend/portfolio-service/core/: logging.py
backend/portfolio-service/models/: user_models.py
backend/python-service/: Dockerfile  pyproject.toml  requirements.txt  start-dev.sh
backend/python-service/app/: config.py  main.py  main_test.py  websocket_manager.py
backend/python-service/core/: logging.py
backend/python-service/models/: websocket_models.py
backend/python-service/tests/: test_api.py
backend/stock-service/: .dockerignore  .env.example  .example.env  Dockerfile  Dockerfile.test  README.md  database_manager.py  pyproject.toml  start-stock-service-dev.sh
backend/stock-service/app/: auth.py  config.py  dependencies.py  main.py  subscription_routes.py  utils.py
backend/stock-service/app/cpp/hmm/: CMakeLists.txt  setup.py
backend/stock-service/app/cpp/hmm/bindings/: hmm_bindings.cpp
backend/stock-service/app/cpp/hmm/src/: hmm.cpp  hmm.h  main.cpp
backend/stock-service/app/database/: __init__.py  connection.py  duckdb_manager.py  external_database_manager.py  news_data_manager.py  stock_data_manager.py  subscription_manager.py
backend/stock-service/app/modal/: finbert_analysis.py  modal_setup.py  simple_gpu_test.py
backend/stock-service/app/routes/: banking.py  snaptrade.py  t212.py
backend/stock-service/app/services/: gocardless.py
backend/stock-service/app/stocks/: OHLCV_buffer.py  [deprecated] historic_api_manager.py  [deprecated] market_data_handler.py  data_aggregator.py  errors.py  historical_data.py  news_websocket.py  stockHandler.py  subscription_manager.py  websocket_manager.py
backend/stock-service/app/utilities/: cache.py
backend/stock-service/core/: logging.py
backend/stock-service/data/: stock_data.duckdb  stock_data.duckdb.wal
backend/stock-service/docs/: SUBSCRIPTION_FLOW.md
backend/stock-service/docs/source/: app.database.rst  app.rst  app.stocks.rst  conf.py  index.rst
backend/stock-service/models/: stock_models.py  t212_models.py  user_models.py  websocket_models.py
backend/stock-service/tests/: README.md  __init__.py  conftest.py  print_pickle.py  synthetic_data_generator.py  test_data_aggregator.py  test_duckdb_manager.py  test_historical_data.py  test_runner.py  test_snaptrade.py  test_stock_handler.py  test_subscription_integration.py  test_subscription_manager.py  test_tradingview_api.py  test_websocket_simple.py
docs/: Structure.md  architectural_diagram_1.md  backend_structure.md  frontend_structure.md  root_directory_structure.md
frontend/: .dockerignore  .env.example  .example.env  .gitignore  Dockerfile  Dockerfile.test  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  index.tsx  main.tsx
frontend/src/components/: AccountBalances.tsx  AllBalances.tsx  Dashboard.tsx  LandingPage.tsx  LightweightStockChart.tsx  Login.tsx  NewsFeed.tsx  SearchBar.tsx  SelectBank.tsx  Sidebar.tsx  StockChart.tsx  answer.md
frontend/src/lib/: api-client.ts  auth.ts  supabase.ts
frontend/src/services/: bankclient-datafeed.ts  t212-service.ts  tradingview-datafeed.ts
frontend/src/theme/: index.ts
supabase/: README.md  config.toml
supabase/migrations/: 20251221134245_create_user_profiles.sql  20251221134246_create_bank_requisitions.sql  20251221134247_add_rls_policies.sql  20251221134248_create_user_trigger.sql  20251222082309_create_bank_requisitions.sql  20251226205154_create_bank_account_balances.sql  20260103093407_create_t212.sql  20260104092450_rls_policies_t212.sql  20260104092648_rls_policies_bank_account_balances.sql  20260104112959_enforce_unique_user_t212.sql  20260113172313_create_end_agreements.sql  20260115224131_create_user_subscriptions.sql  20260206120000_create_snaptrade_users.sql
