[tool.poetry]
name = "python-service"
version = "0.1.0"
description = "Backend python service to provide websocket information on stock data"
authors = ["JSh4w <jontyshaw@btinternet.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.104.0"
uvicorn = "0.23.2"
sqlalchemy = "2.0.22"
pandas = "2.1.1"
numpy = "1.26.0"
websockets = "15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
httpx = "0.24.1"
uvicorn = {extras = ["standard"], version = "0.23.2"}
watchfiles = "^0.21.0" #watchfiles enables hot-reloading in uvicorn

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"