[tool.poetry]
name = "python-service"
version = "0.1.0"
description = "Backend python service to provide websocket information on stock data"
authors = ["JSh4w <jontyshaw@btinternet.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.104.0" #required to create the API
uvicorn = "0.23.2" #required to run the server
sqlalchemy = "2.0.22" #required to handle database interactions
pandas = "2.1.1" #required to handle dataframes
numpy = "1.26.0" #required to handle numerical operations
websockets = "15.0.1" #more modern than websocket, built around asyncio
pydantic = "^2.11.7" #required to validate data
pydantic-settings = "^2.10.1" #required to validate data
psycopg2-binary = "^2.9.10" #required to connect to postgres
alembic = "^1.16.2" #required to manage database migrations
httpx = "^0.28.1"
supabase = "^2.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
uvicorn = {extras = ["standard"], version = "0.23.2"}
watchfiles = "^0.21.0" #watchfiles enables hot-reloading in uvicorn

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"