[tool.poetry]
name = "stock-service"
version = "1.0.0"
description = "Real-time stock market data and websocket service"
authors = ["JSh4w <jontyshaw@btinternet.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.104.0"
uvicorn = "0.23.2"
pandas = "2.1.1"
numpy = "1.26.0"
websockets = "15.0.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
click = "^8.1.7"
duckdb = "^1.3.2"
sphinx = "^8.2.3"
modal = "^1.2.0"
pyjwt = "^2.10.1"
cryptography = "^46.0.3"
supabase = "^2.27.0"
alpaca-py = "^0.43.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
uvicorn = {extras = ["standard"], version = "0.23.2"}
watchfiles = "^0.21.0"
sphinx-autodoc-typehints = "^3.2.0"
sphinx-rtd-theme = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
init-hook = 'import sys; from pathlib import Path; sys.path.append(str(Path(__file__).parent.resolve()))'

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]